cmake: Enable --warn-uninitialized inside string(CONFIGURE) and configure_file

Fixes: #18489