Source/cmMakefile.h
@@ -990,7 +990,7 @@ private:
   cmake::MessageType ExpandVariablesInStringNew(
     std::string& errorstr, std::string& source, bool escapeQuotes,
     bool noEscapes, bool atOnly, const char* filename, long line,
-    bool removeEmpty, bool replaceAt) const;
+    bool replaceAt) const;
   /**
    * Old version of GetSourceFileWithOutput(const std::string&) kept for
    * backward-compatibility. It implements a linear search and support
